# freewnn-debian3

./: CONTRIBUTORS  COPYRIGHT-j  ChangeLog  ChangeLog.en  ChangeLog.old  FreeWnn-1.1.1-a020.tar.bz2  FreeWnn-1.1.1-a021.tar.bz2  INSTALL  INSTALL.en  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  freewnn_1.1.0+1.1.1-a016.orig.tar.gz.delta  freewnn_1.1.0+1.1.1-a016.orig.tar.gz.id  freewnn_1.1.0+1.1.1-a017.orig.tar.gz.delta  freewnn_1.1.0+1.1.1-a017.orig.tar.gz.id  freewnn_1.1.0+1.1.1-a020.orig.tar.gz.delta  freewnn_1.1.0+1.1.1-a020.orig.tar.gz.id  freewnn_1.1.0+1.1.1-a021.orig.tar.gz.delta  freewnn_1.1.0+1.1.1-a021.orig.tar.gz.id  freewnn_1.1.1~a021+cvs20100325.orig.tar.gz.delta  freewnn_1.1.1~a021+cvs20100325.orig.tar.gz.id  freewnn_1.1.1~a021+cvs20120618.orig.tar.xz.delta  freewnn_1.1.1~a021+cvs20120618.orig.tar.xz.id  freewnn_1.1.1~a021+cvs20130302.orig.tar.xz.delta  freewnn_1.1.1~a023.orig.tar.bz2.delta  freewnn_1.1.1~a023.orig.tar.bz2.id  makerule.mk.in
PubdicPlus/: Makefile.in  PUBDICPLUS-ERRATA  Version  bio.hd  chimei.hd  computer.hd  ctopd.c  fzk.con  fzk.fzkattr  fzk.jircon  fzk.shuutan  hinsi.data  jinmei.hd  koyuu.hd  pod.c  ps.tab  pubdic.p  setsuji.hd  special.p  special.u  symbol.hd  tankan.hd  wc.tab  wtopd.c
Wnn/: Makefile.in
Wnn/conv/: Makefile.in  cvt_head.h  cvt_key.c  cvt_read.c
Wnn/etc/: bcopy.c  bdic.c  dic_atojis.c  gethinsi.c  hindo.c  mkdir.c  msg.c  pwd.c  py_table.c  revdic.c  server_env.c  sstrings.c  strings.c  vasprintf.c  xutoj.c  yincoding.c  zy_table.c
Wnn/include/: Makefile.in  commonhd.h  conv.h  copyright.h  cplib.h  demcom.h  etc.h  hinsi.h  hinsi_file.h  jd_sock.h  jdata.h  jh.h  jlib.h  jlib_private.h  jllib.h  jslib.h  jutil.h  msg.h  rk_spclval.h  romkan.h  wnn_config.h  wnn_os.h  wnn_string.h  wnnerror.h
Wnn/jd/: Makefile.in  jserverrc  libwnn.msg  serverdefs  uumkey.omr  uumrc.rev  uumrc_e  uumrc_vi  wnnenvrc.omr  wnnenvrc.rev  wnnenvrc_R.omr  wnnenvrc_R.rem  wnnenvrc_R.rev
Wnn/jlib/: Makefile.in  jl.c  js.c  kankana.c  wnnerrmsg.c
Wnn/jlib.V3/: Makefile.in  jlib.h  jlv3.c
Wnn/jserver/: Makefile.in  atojis.c  b_index.c  bnsetu_kai.c  daibn_kai.c  ddefine.h  de.c  de_header.h  dictoasc.c  dispatch.c  do_dic_env.c  do_dic_no.c  do_env.c  do_filecom.c  do_henkan.c  do_henkan1.c  do_hindo_s.c  error.c  fzk.c  fzk.h  get_kaiarea.c  hinsi_list.c  initjserv.c  jbiki.c  jbiki_b.c  jikouho.c  jikouho_d.c  jishoop.c  jishosub.c  jmt0.c  kaiseki.h  mknode0.c  mknode1.c  mknode2.c  rd_jishoop.c  readfile.c  renbn_kai.c  sisheng.c  snd_rcv.c  w_string.c
Wnn/jutil/: Makefile.in  atod.c  atof.c  atorev.c  dic_head.c  dtoa.c  oldatonewa.c  sort.c  ujisf.c  utilbdic.c  wddel.c  wdreg.c  wnnkill.c  wnnstat.c  wnntouch.c
Wnn/ld/: Makefile.in  uum.msg  uumkey
Wnn/man/: Makefile.in
Wnn/manual/: intro
Wnn/pubdicplus/: Makefile.in
Wnn/romkan/: Makefile.in  rk_bltinfn.c  rk_extvars.h  rk_fundecl.h  rk_header.h  rk_macros.h  rk_main.c  rk_modread.c  rk_read.c  rk_spclval.h  rk_vars.c
Wnn/uum/: Makefile.in  basic_op.c  buffer.h  cursor.c  cvtcode.h  epilogue.c  functions.c  header.c  hinsi.c  history.c  inspect.c  jhlp.c  jikouho.c  jis_in.c  jutil.c  kensaku.c  key_bind.c  kuten.c  printf.c  prologue.c  redraw.c  screen.c  sdefine.h  select_ele.c  setutmp.c  sheader.h  termcap.c  termio.c  touroku.c  ttyfdslot.c  uif.c  w_string.c  wnnrc_op.c
Wnn/wnncons/: Makefile.in
Xsi/: CONTRIBUTORS  COPYRIGHT-j  ChangeLog  INSTALL  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  makerule.mk  makerule.mk.in
Xsi/PubdicPlus/: Makefile  Makefile.in  PUBDICPLUS-ERRATA  PUBDICPLUS-README  ctopd.c  fzk.attr  fzk.con  fzk.fzkattr  fzk.jirattr  fzk.jircon  fzk.master  fzk.shuutan  kihon.hd  pod.c  pubdic.p  special.hd  sys_dic.hd  wtopd.c
Xsi/Wnn/: Makefile  Makefile.in
Xsi/Xwnmo/: Makefile.in
Xsi/cWnn/: Makefile  Makefile.in
Xsi/kWnn/: Makefile  Makefile.in
Xsi/olddoc/: Makefile.R5inst  Makefile.inst  Wnn-FAQ  Wnn-READ.ME  Wnn-READ.ME.j  configR5-Project.tmpl
Xwnmo/: Makefile.in  README  README.j
Xwnmo/X11R6/: README
Xwnmo/cd/: Makefile.in  uumrc_p.xim  uumrc_z.xim
Xwnmo/jd/: Makefile.in  cvt_xim_tbl  uumkey.xim  uumkey_v.xim  uumrc_vi.xim  ximconf  ximrc  ximrc_vi
Xwnmo/jlib/: Makefile.in
Xwnmo/kd/: Makefile.in  uumkey.xim
Xwnmo/ld/: Makefile.in  uumrc.xim
Xwnmo/romkan_m/: Makefile.in  rext.h  rk_alloc.c  rk_bltinfn.c  rk_extvars.h  rk_fundecl.h  rk_header.h  rk_macros.h  rk_main.c  rk_modread.c  rk_multi.h  rk_read.c  rk_spclval.h  rk_vars.c
Xwnmo/td/: Makefile.in  uumkey.xim  uumkey_p.xim  uumrc.xim  uumrc_p.xim  uumrc_z.xim
Xwnmo/test/: README  callback.c  chkcset.c  chkfe.c  chkic.c  chkim.c  chkpsset.c  chkreset.c  chkutil.c  chkxls.c  curses.c  define.h  exvalue.h  final.c  func.h  funcv.c  keyev.c  typedef.h  ximtest.c  xresource.c
Xwnmo/xjutil/: Makefile.in  display.c  hinsi.c  init_w.c  jhlp.c  jutil.c  kensaku.c  keyin.c  message.c  prologue.c  sxheader.h  touroku.c  uif.c  xext.h  xheader.c  xichiran.c  xjutil.h  (+5 more)
cWnn/: Makefile.in
debian/: _uum.install  changelog  control  control.uum  copyright  freewnn-common.dirs  freewnn-common.docs  freewnn-common.files  freewnn-common.install  freewnn-common.links  freewnn-common.manpages  freewnn-cserver-dev.files  freewnn-cserver.conffiles  freewnn-cserver.docs  freewnn-cserver.files  freewnn-cserver.freewnn-tserver  freewnn-cserver.init  freewnn-cserver.install  freewnn-cserver.manpages  freewnn-cserver.postinst  freewnn-cserver.postrm  freewnn-cserver.prerm  freewnn-cserver.undocumented  freewnn-jserver-dev.files  freewnn-jserver.conffiles  freewnn-jserver.files  freewnn-jserver.init  freewnn-jserver.install  freewnn-jserver.manpages  freewnn-jserver.postinst  freewnn-jserver.postrm  freewnn-jserver.prerm  freewnn-kserver-dev.files  freewnn-kserver.conffiles  freewnn-kserver.files  freewnn-kserver.init  freewnn-kserver.install  freewnn-kserver.postinst  freewnn-kserver.postrm  freewnn-kserver.prerm  (+16 more)
kWnn/: Makefile.in
olddoc/: 00README  Makefile.R5ini  Makefile.ini  README  README.sun  config-Project.tmpl
(+1391 files in other folders)
